# Quality-improvement-charts

./: .gitignore  API_STABILITY.md  CHANGELOG.md  EXCEL_COMPANION_REPORT.md  LICENSE  MANIFEST.in  PARITY_REPORT.md  README.md  ROADMAP.md  STATISTICAL_REVIEW.md  VALIDATION_REPORT.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api_reference.md  attribute_charts.md  excel_companion.md  excel_guide.md  excel_setup.md  excel_troubleshooting.md  excel_user_guide.md  github-release-v0.3.0.md  github-release-v0.4.0.md  github-release-v0.5.0.md  github-release-v0.6.0.md  github-release-v0.7.0.md  github-release-v0.8.0.md  github-release-v0.9.0.md  github-release-v1.0.0.md  github-release-v1.1.0.md  individuals_charts.md  installation.md  methodology_limitations.md  migration_qicharts2.md  nhs_guide.md  nhs_interpretation_table.md  powerbi.md  powerpoint_guide.md  quickstart.md  rare_event_charts.md  rare_event_spc.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.5.0.md  release-notes-v0.6.0.md  release-notes-v0.7.0.md  release-notes-v0.8.0.md  release-notes-v0.9.0.md  release-notes-v1.0.0.md  release-notes-v1.1.0.md  release-notes-v1.2.0.md  release-notes-v1.2.1.md  release-notes-v1.3.0.md  (+13 more)
examples/: c_chart.py  excel_example.py  excel_export.py  excel_table_output.py  g_chart.py  linkedin_demo_chart.py  p_chart.py  p_prime_chart.py  powerbi_attribute_chart.py  powerbi_export.py  powerbi_python_visual.py  powerbi_table_transform.py  powerpoint_export.py  quick_start.py  run_chart.py  s_chart.py  t_chart.py  u_chart.py  u_prime_chart.py  xbar_chart.py  xmr_chart.py
excel/: README_excel.md  pyqicharts_excel_template.xlsm
sample_data/: sample_healthcare_qi_data.csv  sample_subgroup_measurements.csv
src/pyqicharts/: __init__.py  core.py  datasets.py  export.py  nelson.py  nhs_rules.py  pareto.py  powerbi.py  rules.py  signals.py  tables.py  themes.py  validation.py
src/pyqicharts_excel/: __init__.py  config.py  examples.py  excel_io.py  outputs.py  ribbon.py  runner.py  validation.py
tests/: conftest.py  test_excel_config.py  test_excel_helpers.py  test_excel_io.py  test_excel_outputs.py  test_excel_runner.py  test_nhs_rules.py  test_process_features.py  test_qic.py  test_rare_event_charts.py  test_reporting.py  test_risk_adjusted_charts.py  test_rules.py  test_segment_validation_audit.py  test_tables.py  test_themes.py  test_v1_1_parity_features.py  test_v1_2_completion.py  test_v1_release.py  test_validation_fixture_expansion.py  test_validation_release.py
tests/validation/: test_chart_validation_data.py
validation/: README.md  acceptance_checklist.md
validation/datasets/: g_chart.csv  p_prime.csv  t_chart.csv  xmr.csv
validation/expected_outputs/: g_chart_expected.csv  p_prime_expected.csv  t_chart_expected.csv  xmr_expected.csv
validation_data/: README.md
validation_data/expanded/: README.md  c_edge.csv  fixture_manifest.csv  healthcare_g.csv  healthcare_i.csv  healthcare_mr.csv  healthcare_p.csv  healthcare_p_prime.csv  healthcare_pareto.csv  healthcare_run.csv  healthcare_s.csv  healthcare_u.csv  healthcare_u_prime.csv  i_edge.csv  industrial_c_process.csv  industrial_g_process.csv  industrial_i_process.csv  industrial_p_prime_process.csv  industrial_p_process.csv  industrial_pareto_process.csv  industrial_run_process.csv  industrial_s_process.csv  industrial_u_prime_process.csv  industrial_u_process.csv  mr_edge.csv  p_edge.csv  p_prime_edge.csv  pareto_edge.csv  run_edge.csv  s_edge.csv  t_edge.csv  u_edge.csv
validation_data/expanded_expected_outputs/: c_edge_expected.csv  expected_manifest.csv  g_edge_expected.csv  healthcare_c_expected.csv  healthcare_g_expected.csv  healthcare_i_expected.csv  healthcare_mr_expected.csv  healthcare_p_expected.csv  healthcare_p_prime_expected.csv  healthcare_pareto_expected.csv  healthcare_run_expected.csv  healthcare_s_expected.csv  healthcare_t_expected.csv  healthcare_u_expected.csv  healthcare_u_prime_expected.csv  healthcare_xbar_expected.csv  i_edge_expected.csv  industrial_c_process_expected.csv  industrial_g_process_expected.csv  industrial_i_process_expected.csv  industrial_mr_process_expected.csv  industrial_p_prime_process_expected.csv  industrial_p_process_expected.csv  industrial_pareto_process_expected.csv  industrial_run_process_expected.csv  industrial_s_process_expected.csv  industrial_t_process_expected.csv  industrial_u_prime_process_expected.csv  industrial_u_process_expected.csv  industrial_xbar_process_expected.csv  mr_edge_expected.csv  p_edge_expected.csv  p_prime_edge_expected.csv  (+7 more)
(+24 files in other folders)
