[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pyqicharts"
version = "0.1.0"
description = "Quality Improvement charts for Python: run charts, Shewhart control charts, Pareto charts, and Anhøj rules."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Craig la B" }
]
keywords = ["quality-improvement", "spc", "control-charts", "run-charts", "healthcare", "pareto"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/craigl-uk/pyqicharts"
Repository = "https://github.com/craigl-uk/pyqicharts"
Issues = "https://github.com/craigl-uk/pyqicharts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyqicharts"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
