[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqicharts"
version = "1.0.0"
description = "Quality Improvement and Statistical Process Control charts for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Assegai Studios Ltd"}]
keywords = ["quality improvement", "statistical process control", "spc", "run charts", "control charts", "healthcare analytics", "power bi", "excel"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.22", "pandas>=1.5", "matplotlib>=3.5"]

[project.optional-dependencies]
reporting = ["openpyxl>=3.1", "python-pptx>=0.6.23"]
dev = ["pytest>=7", "build>=1.0", "openpyxl>=3.1", "python-pptx>=0.6.23"]

[project.urls]
Homepage = "https://github.com/AssegaiStudios/Quality-improvement-charts"
Repository = "https://github.com/AssegaiStudios/Quality-improvement-charts"
Issues = "https://github.com/AssegaiStudios/Quality-improvement-charts/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
