[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqicharts"
version = "1.3.1"
description = "Quality Improvement and Statistical Process Control charts for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Assegai Studios Ltd"}]
keywords = ["quality improvement", "statistical process control", "spc", "run charts", "control charts", "healthcare analytics", "power bi", "excel"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy>=1.22", "pandas>=1.5", "matplotlib>=3.5"]

[project.optional-dependencies]
reporting = ["openpyxl>=3.1", "python-pptx>=0.6.23"]
excel = ["xlwings>=0.30", "openpyxl>=3.1", "python-pptx>=0.6.23"]
dev = ["pytest>=7", "pytest-cov>=5", "build>=1.0", "twine>=5", "check-manifest>=0.50", "openpyxl>=3.1", "python-pptx>=0.6.23", "xlwings>=0.30"]

[project.scripts]
pyqicharts-excel-init = "pyqicharts_excel.runner:init_template_cli"

[project.urls]
Homepage = "https://github.com/AssegaiStudios/Quality-improvement-charts"
Repository = "https://github.com/AssegaiStudios/Quality-improvement-charts"
Issues = "https://github.com/AssegaiStudios/Quality-improvement-charts/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["pyqicharts"]

[tool.coverage.report]
fail_under = 90
show_missing = true
